--- a/Front/index.html
+++ b/Front/index.html
@@ -94,7 +94,7 @@
                   <a href="" class="nav__sublink">Wimpern Lifting</a>
               </li> 
                 <li class="nav__subitem">
-                    <a href="/Front/waxservice/index.html" target="_blank" class="nav__sublink">Waxing</a>
+                    <a href="waxservice/index.html" target="_blank" class="nav__sublink">Waxing</a>
                 </li>
                 <li class="nav__subitem">
                   <a href="" class="nav__sublink">Schulung</a>
