--- a/Front/blog.html
+++ b/Front/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mina Lashes and Beauty, wimperverlangerung, wachsen</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +18,7 @@
   <body>
     <div class="blog-title-wrapper">
       <div class="blog-title">
-        <h1 class="title">Your blog title here.</h1>
+        <h1 class="title">WIR TEILEN, WAS WIR AM BESTEN WISSEN</h1>
         <div class="sub-title text-center">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia
           nisi error harum quasi natus expedita voluptates blanditiis et, nulla
@@ -31,9 +31,9 @@
     <div class="blog-list-wrapper container">
       <ul class="blog-list-nav list-unstyled">
         <li class="blog-list-nav-item active">All</li>
-        <li class="blog-list-nav-item">Design</li>
-        <li class="blog-list-nav-item">Branding</li>
-        <li class="blog-list-nav-item">Icons</li>
+        <li class="blog-list-nav-item">wimpern</li>
+        <li class="blog-list-nav-item">Waxing</li>
+        <li class="blog-list-nav-item">Business</li>
       </ul>
       <div class="blog-list">
         <div class="blog-list-item">
@@ -41,7 +41,7 @@
             <img src="img/mina_lashes_services.jpg" alt="" />
           </div>
           <div class="blog-list-item__sub-title">
-            <div class="left">Marketing</div>
+            <div class="left">wimpern</div>
             <div class="right">Text</div>
           </div>
           <h6 class="blog-list-item__title">
@@ -54,14 +54,14 @@
             voluptatibus ab modi unde ad reprehenderit provident et explicabo
             vero fugit quidem.
           </div>
-          <button class="view-button">Read full article</button>
+          <button class="view-button">Vollständigen Artikel lesen</button>
         </div>
         <div class="blog-list-item">
           <div class="blog-list-item__img">
             <img src="img/mina_lashes_services.jpg" alt="" />
           </div>
           <div class="blog-list-item__sub-title">
-            <div class="left">Marketing</div>
+            <div class="left">Waxing</div>
             <div class="right">Text</div>
           </div>
           <h6 class="blog-list-item__title">
@@ -74,14 +74,14 @@
             voluptatibus ab modi unde ad reprehenderit provident et explicabo
             vero fugit quidem.
           </div>
-          <button class="view-button">Read full article</button>
+          <button class="view-button">Vollständigen Artikel lesen</button>
         </div>
         <div class="blog-list-item">
           <div class="blog-list-item__img">
             <img src="img/mina_waxing_services.jpg" alt="" />
           </div>
           <div class="blog-list-item__sub-title">
-            <div class="left">Marketing</div>
+            <div class="left">Business</div>
             <div class="right">Text</div>
           </div>
           <h6 class="blog-list-item__title">
@@ -94,7 +94,7 @@
             voluptatibus ab modi unde ad reprehenderit provident et explicabo
             vero fugit quidem.
           </div>
-          <button class="view-button">Read full article</button>
+          <button class="view-button">Vollständigen Artikel lesen</button>
         </div>
       </div>
 
