--- a/Front/index.html
+++ b/Front/index.html
@@ -94,7 +94,7 @@
                   <a href="" class="nav__sublink">Wimpern Lifting</a>
               </li> 
                 <li class="nav__subitem">
-                    <a href="waxservice/index.html" target="_blank" class="nav__sublink">Waxing</a>
+                    <a href="waxservice/index.html" onclick="window.open('waxservice/index.html');" target="_blank" class="nav__sublink">Waxing</a>
                 </li>
                 <li class="nav__subitem">
                   <a href="" class="nav__sublink">Schulung</a>
@@ -108,7 +108,7 @@
           <li><a class="main-nav-link" href="#pricing">Preis</a></li>
           <li><a class="main-nav-link" href="#contact">Kontakt</a></li>
           <li>
-            <a class="main-nav-link pointer" onclick="window.open('content/blog/5-Regeln,-die-Sie-tun,-die-Ihre-Wimpernverlängerung-ruinieren.html');" href="">Blog</a>
+            <a class="main-nav-link pointer" onclick="window.open('blog.html');" href="">Blog</a>
           </li>
           
 
